feat: mobile responsive

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                 <h2>Coloca a senha aí!<br>Aquela de sempre mesmo.</h2>
                 <div class="form-field">
                     <label for="password">Senha</label>
-                    <input type="password" name="password" placeholder="Aqui, amigo."> <br><br>
+                    <input type="password" name="password" placeholder="Aqui."> <br><br>
                 </div>
                 
                 <button class="btn-login">ENTRAR</button>
