--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
                 <h2>Coloca a senha aí!<br>Aquela de sempre mesmo.</h2>
                 <div class="form-field">
                     <label for="password">Senha</label>
-                    <input type="password" name="password" placeholder="Aqui."> <br><br>
+                    <input type="password" name="password" placeholder="Aqui." id="senha"> <br><br>
                 </div>
                 
-                <button class="btn-login">ENTRAR</button>
+                <button class="btn-login" onclick="entrar()">ENTRAR</button>
             </div>
         </div>
     </div>
+
+    <script src="scripts-login.js"></script>
 
 </body>
 </html>
